--- a/site/flex.html
+++ b/site/flex.html
@@ -29,12 +29,12 @@ h1{
 <h1>DIFFERENT BIRDS</h1>
 <h2>Will learn flex</h2>
 <div class="container">
-<img src="img1.jpeg"/>
-<img src="img2.jpeg"/>
-<img src="img3.jpeg"/>
-<img src="img4.jpeg"/>
-<img src="img5.jpeg"/>
-<img src="img6.jpeg"/>
+<img src="csk.png"/>
+<img src="DC.png"/>
+<img src="Hyderabad.jpg"/>
+<img src="KKR.png"/>
+<img src="Punjab.jpg"/>
+<img src="RCB.png"/>
 </div>
 </body>
 </html>
