--- a/site/flex.html
+++ b/site/flex.html
@@ -26,8 +26,8 @@ h1{
 </style>
 </head>
 <body>
-<h1>DIFFERENT BIRDS</h1>
-<h2>Will learn flex</h2>
+<h1>IPL Teams</h1>
+<h2> Learn flex</h2>
 <div class="container">
 <img src="csk.png"/>
 <img src="DC.png"/>
