--- a/site/flex.html
+++ b/site/flex.html
@@ -30,7 +30,7 @@ h1{
 <h2> Learn flex</h2>
 <div class="container">
 <img src="csk.png"/>
-<img src="DC.png"/>
+<img src="DC.jpg"/>
 <img src="Hyderabad.jpg"/>
 <img src="KKR.png"/>
 <img src="Punjab.jpg"/>
