--- a/site/flex.html
+++ b/site/flex.html
@@ -11,7 +11,7 @@ img{
   width : 450px;
   height : 350px;
   margin : 5px;
-  transition : all 1s;
+  transition : all 2s;
   box-shadow : 4px 4px 4px #883885;
 }
 img:hover{
@@ -21,7 +21,7 @@ h1{
   border-bottom : 2px solid blue;
   width : 400px;
   text-align : center : center;
-  border-right : 2px solid orange;
+  border-right : 2px solid green;
 }
 </style>
 </head>
