--- a/site/flex.html
+++ b/site/flex.html
@@ -18,11 +18,14 @@ img:hover{
   transform : rotate(90deg);
 }
 h1{
-  border-bottom : 2px solid blue;
-  width : 400px;
+  border-bottom : 2px solid red;
+  width : 500px;
   text-align : center : center;
-  border-right : 2px solid green;
+  border-right : 3px solid green;
 }
+body{
+  background-color:green;
+  }
 </style>
 </head>
 <body>
