--- a/site/flex.html
+++ b/site/flex.html
@@ -39,7 +39,7 @@ body{
 <img src="Punjab.jpg"/>
 <img src="RCB.png"/>
 </div>
-  <div style="border:2px; bg-color:orange; text-color:pink; text-align:center;">
+  <div style="border:2px solid blue; bg-color:orange; text-color:pink; text-align:center;">
     <h3>Submitted By</h3>
     <h4>Ayush Kumar</h4>
     <h4>1906141</h4>
