--- a/site/flex.html
+++ b/site/flex.html
@@ -22,6 +22,7 @@ h1{
   width : 500px;
   text-align : center : center;
   border-right : 3px solid green;
+  text-color:blue;
 }
 body{
   background-color:green;
@@ -39,7 +40,7 @@ body{
 <img src="Punjab.jpg"/>
 <img src="RCB.png"/>
 </div>
-  <div style="border:2px solid blue; bg-color:orange; text-color:pink; text-align:center;">
+  <div style="border:2px solid blue; background-color:orange; text-color:pink; margin:auto;">
     <h3>Submitted By</h3>
     <h4>Ayush Kumar</h4>
     <h4>1906141</h4>
