--- a/site/flex.html
+++ b/site/flex.html
@@ -12,26 +12,40 @@ img{
   height : 350px;
   margin : 5px;
   transition : all 2s;
-  box-shadow : 4px 4px 4px #883885;
+  box-shadow : 8px 8px 8px #883885;
 }
 img:hover{
-  transform : rotate(90deg);
+  transform : rotate(360deg);
 }
+
 h1{
-  border-bottom : 2px solid red;
-  width : 500px;
-  text-align : center : center;
-  border-right : 3px solid green;
-  text-color:blue;
+   font-size: 50px; 
+   font-family: "League Gothic", Impact, sans-serif;
+    animation: color-change 2s infinite;
+    text-align: center;
 }
+@keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: black; }
+  }
 body{
-  background-color:green;
+	background-image: linear-gradient(#ddd6f3,#faaca8);
+  background-color:#ebf5f5;
+  }
+  .c
+  {
+  	border: 5px outset pink;
+    background-color: lightblue;
+    text-align: center;
+    width:400px;
+    margin:auto;
   }
 </style>
 </head>
 <body>
 <h1>IPL Teams</h1>
-<h2> Learn flex</h2>
+<h1> Learn flex</h1>
 <div class="container">
 <img src="csk.png"/>
 <img src="DC.jpg"/>
@@ -40,8 +54,8 @@ body{
 <img src="Punjab.jpg"/>
 <img src="RCB.png"/>
 </div>
-  <div style="border:2px solid blue; background-color:orange; text-color:pink; margin:auto;">
-    <h3>Submitted By</h3>
+  <div class="c">
+  <h3>Submitted By</h3>
     <h4>Ayush Kumar</h4>
     <h4>1906141</h4>
   </div>
