--- a/site/flex.html
+++ b/site/flex.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .container{
   display : flex;
@@ -16,6 +18,15 @@ img{
 }
 img:hover{
   transform : rotate(360deg);
+  border: solid;
+  box-shadow: 10px 10px 5px #ccc;
+  border-radius:45px 15px 45px;
+  border:2px solid #fff;
+  width: 300px;
+  height: 380px;
+  margin-left: 10px;
+  margin-right: 10px;
+  opacity: 1;
 }
 
 h1{
@@ -32,6 +43,7 @@ h1{
 body{
 	background-image: linear-gradient(#ddd6f3,#faaca8);
   background-color:#ebf5f5;
+  animation: bgcolor 15s infinite
   }
   .c
   {
@@ -53,8 +65,10 @@ body{
 <img src="KKR.png"/>
 <img src="Punjab.jpg"/>
 <img src="RCB.png"/>
-</div>
+</div><hr />
+
   <div class="c">
+  	<img width="30px" height="30px" src="Mypic.jpg" />
   <h3>Submitted By</h3>
     <h4>Ayush Kumar</h4>
     <h4>1906141</h4>
