--- a/site/lab4.html
+++ b/site/lab4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My educational qualifications...</title>
-    <link rel="stylesheet" href="Lab4.css">
+    <link rel="stylesheet" href="lab4.css">
   </head>
   <body>
     <h1>..Ayush Kumar..</h1>
@@ -30,7 +30,6 @@
         <td>8.22</td>
       </tr>
     </table>
-    <img id="img1" src="edu.png" alt="edu">
     
     <div id="grad">
       <h4>BTech-2nd year</h4>
