--- a/site/flex0.html
+++ b/site/flex0.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>IPL Teams</h1>
-<h1 id="a"> Learn flex</h1>
+<h1> Learn flex</h1>
 <div class="container">
 <img src="csk.png"/>
 <img src="DC.jpg"/>
