--- a/site/lab5(b).html
+++ b/site/lab5(b).html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="https://kumarayush7767.github.io/Home/site/">Registration Form <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://kumarayush7767.github.io/Home/site/flex.html">Lab-5(a)</a>
+            <a class="nav-link" href="https://kumarayush7767.github.io/Home/site/flex0.html">Lab-5(a)</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -30,7 +30,7 @@
               <a class="dropdown-item" href="https://kumarayush7767.github.io/Home/site/">Assignment 3</a>
               <a class="dropdown-item" href="https://kumarayush7767.github.io/Home/site/lab4.html">Assignment 4</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://kumarayush7767.github.io/Home/site/flex.html">Assignment 5</a>
+              <a class="dropdown-item" href="https://kumarayush7767.github.io/Home/site/flex0.html">Assignment 5</a>
             </div>
           </li>
           <li class="nav-item">
@@ -49,7 +49,7 @@
       <p class="lead">This is a  simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
       <hr class ="my-4">
       <p>Click the button below to check today's assignment </p>
-      <a class="btn btn-primary btn-lg" id="btn1" href="https://kumarayush7767.github.io/Home/site/flex.html" role="button">CSS-flex</a>
+      <a class="btn btn-primary btn-lg" id="btn1" href="https://kumarayush7767.github.io/Home/site/flex0.html" role="button">CSS-flex</a>
     </div>
 
     <!-- Button trigger modal -->
